@@ -3,20 +3,18 @@ package ch.alpine.sophus.hs.r3;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 
-import ch.alpine.tensor.Tensor;
-import ch.alpine.tensor.Tensors;
-import ch.alpine.tensor.alg.Dimensions;
-
 class PlatonicSolidTest {
   @ParameterizedTest
   @EnumSource
   void test(PlatonicSolid platonicSolid) {
-    Tensor faces = Tensors.matrixInt(platonicSolid.faces());
-    assertEquals(Dimensions.of(faces), List.of(platonicSolid.n(), platonicSolid.shape()));
+    List<int[]> faces = platonicSolid.faces();
+    assertEquals(faces.size(), platonicSolid.faceCount());
+    assertEquals(faces.stream().map(a -> a.length).distinct().toList(), Arrays.asList(platonicSolid.faceShape()));
   }
 }
